[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Upgrade_Button/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Upgrade_Button/ButtonNode2d.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0, 0.160784, 1 )

[node name="ButtonNode2d" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -231.724 ]
}

[node name="Button" parent="." instance=ExtResource( 1 )]
margin_right = 179.807
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )

[node name="VBoxContainer" parent="Button" index="8"]
margin_left = -1.05612
margin_right = -1.05612

[node name="HSeparator2" parent="Button/VBoxContainer" index="0"]
margin_right = 354.0

[node name="Name" parent="Button/VBoxContainer" index="1"]
margin_right = 354.0

[node name="HSeparator" parent="Button/VBoxContainer" index="2"]
margin_right = 354.0

[node name="Effect" parent="Button/VBoxContainer" index="3"]
margin_left = 22.0
margin_right = 332.0
percent_visible = 1.0

[node name="Atribute_descrption" parent="Button/VBoxContainer" index="4"]
margin_left = 22.0
margin_right = 332.0
percent_visible = 1.0

[node name="Upgrade_descrption" parent="Button/VBoxContainer" index="9"]
percent_visible = 1.0

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]

[editable path="Button"]
